# fastapi-celery-sample

./: .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: celery_base.py  main.py  worker.py
tests/: conftest.py
