[tool.poetry]
name = "fastapi-celery-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.4.0"
fastapi = "^0.111.0"
aiofiles = "^23.2.1"
flower = "^2.0.1"
redis = "^5.0.4"
uvicorn = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
